# DataflowEnergyPredictor

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.gdb  LICENSE  README.md  build.sh  measure.sh  profile_i5-1335u.json
.devcontainer/: devcontainer.json
include/: EnergyEdgeFunctions.h  EnergyFact.h  EnergyModel.h  EnergyOfValueAnalysis.h  ProfileLoader.h
src/: EnergyEdgeFunctions.cpp  EnergyModel.cpp  EnergyOfValueAnalysis.cpp  ProfileLoader.cpp  main.cpp
tests/: 1test.cpp  1test.ll  2test.cpp  2test.ll  3test.cpp  3test.ll  fib.cpp  fib.ll  profile.json  simple.cpp  simple.ll  test.cpp  test.ll  test_ifelse_add.cpp  test_ifelse_add.ll  test_ifelse_add2.cpp  test_ifelse_add2.ll  test_loop.cpp  test_loop.ll  test_simple_add.cpp  test_simple_add.ll
